--- a/chatti.html
+++ b/chatti.html
@@ -10,142 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
 
-<style>
-    body {
-            font-family: 'Palanquin Dark', sans-serif;
-            background-color: #000;
-            color: white;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .chat-container {
-            width: 600px;
-            max-width: 95%;
-            background-color: #111;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
-            display: flex;
-            flex-direction: column;
-            height: 80vh;
-        }
-
-        .chat-box {
-            flex: 1;
-            overflow-y: auto;
-            padding: 15px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .message {
-            display: flex;
-            margin-bottom: 12px;
-        }
-
-        .message.user {
-            justify-content: flex-end;
-        }
-
-        .message.ai {
-            justify-content: flex-start;
-        }
-
-        .bubble {
-            padding: 12px;
-            border-radius: 8px;
-            max-width: 75%;
-            word-wrap: break-word;
-            white-space: pre-wrap;
-        }
-
-        .user .bubble {
-            background-color: white;
-            color: black;
-        }
-
-        .ai .bubble {
-            background-color: #222;
-            color: white;
-        }
-
-        /* Code block styling */
-        .bubble pre {
-            background-color: #000;
-            padding: 10px;
-            border-radius: 5px;
-            overflow-x: auto;
-            font-family: monospace;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-        }
-
-        /* Inline code */
-        .bubble code {
-            background-color: #333;
-            padding: 2px 4px;
-            border-radius: 3px;
-            font-family: monospace;
-        }
-
-        /* Links */
-        .bubble a {
-            color: white;
-            text-decoration: none;
-            border-bottom: 1px solid white;
-        }
-
-        .bubble a:hover {
-            text-decoration: underline;
-        }
-
-        .input-container {
-            display: flex;
-            padding: 15px;
-            background-color: #222;
-        }
-
-        textarea {
-            flex: 1;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            background-color: #111;
-            color: white;
-            outline: none;
-            resize: none;
-            height: 40px;
-            min-height: 40px;
-            max-height: 150px;
-        }
-
-        /* Auto-expand textarea */
-        textarea:focus {
-            height: auto;
-        }
-
-        /* Send button */
-        button {
-            margin-left: 10px;
-            padding: 10px;
-            border: none;
-            background-color: white;
-            color: black;
-            font-size: 16px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        button:hover {
-            background-color: #ddd;
-        }
-    </style>
 </head>
+<main>
 <body>
 
     <div class="chat-container">
@@ -260,4 +126,34 @@ userInput.addEventListener("keypress", (event) => {
 
 </script>
 </body>
+</main>
+<nav class="bottom-nav">
+        <a href="#home" class="nav-item">
+            <span class="tooltip">Home</span>
+            🏠
+        </a>
+        <a href="#search" class="nav-item">
+            <span class="tooltip">Search</span>
+            🔍
+        </a>
+        <a href="#games" class="nav-item">
+            <span class="tooltip">Games</span>
+            🎮
+        </a>
+        <a href="#movies" class="nav-item">
+            <span class="tooltip">Movies</span>
+            🎬
+        </a>
+        <a href="#tv" class="nav-item">
+            <span class="tooltip">TV</span>
+            📺
+        </a>
+        <a href="#ai" class="nav-item">
+            <span class="tooltip">AI</span>
+            🤖
+        </a>
+    </nav>
+    
+    <link rel="stylesheet" href="/style.css">
+    <script src="/settings.js"></script>
 </html>
