--- a/Stream-Star/stream/multi.html
+++ b/Stream-Star/stream/multi.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +28,7 @@
         const imdbId = urlParams.get('IMDb');
         const s = urlParams.get('s');
         const e = urlParams.get('e');
-        const iframeUrl = `embed.html#https://multiembed.mov/directstream.php?video_id=${imdbId}&s=${s}&e=${e}`;
+        const iframeUrl = `embed.html#https://vidsrc.su/embed/tv/${imdbId}/${s}/${e}`;
 
         if (imdbId) {
             document.write(`<iframe src="${iframeUrl}" title="IMDb Movie" height="600px" width="1000px"></iframe>`);
